--- a/scss/paginas/_exito.scss
+++ b/scss/paginas/_exito.scss
@@ -1,7 +1,5 @@
-.exito {
-    background-color: 	rgba(220, 220, 220, 0.5);
-}
-.exito__p {
+
+.exito-p {
     font-family: $fuente-terciaria;
     font-size: 1.3rem;
     color: $color-primario;
