--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,11 @@ body {
 .info__titulo {
   font-weight: bold;
   margin-top: 5%;
+  font-family: 1.1rem;
 }
 
-.bi-messenger {
-  color: blue;
+.bi-instagram {
+  color: rgb(234, 71, 166);
 }
 
 .bi-facebook {
@@ -170,8 +171,9 @@ body {
   color: black;
   font-family: "Source Sans Pro", sans-serif;
   margin-top: 5%;
-  background-color: beige;
-  box-shadow: 5px 5px 3px grey;
+  font-size: 1.1rem;
+  background-color: rgba(169, 204, 227, 0.5);
+  padding: 10px;
 }
 
 .indicaciones:hover {
@@ -183,7 +185,7 @@ body {
   list-style: none;
 }
 .cobertura li {
-  font-size: 1.1rem;
+  font-size: 0.8rem;
   font-family: "Source Sans Pro", sans-serif;
   margin-top: 5%;
   color: black;
@@ -201,7 +203,7 @@ body {
 
 .cobertura-p {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 0.7rem;
   font-weight: 600;
   margin-top: 5%;
 }
@@ -226,11 +228,11 @@ body {
   padding: 20px;
 }
 
-.exito {
-  background-color: rgba(220, 220, 220, 0.5);
+.form {
+  font-size: 1rem;
 }
 
-.exito__p {
+.exito-p {
   font-family: "Nuosu SIL", serif;
   font-size: 1.3rem;
   color: black;
@@ -241,12 +243,12 @@ body {
 h1 {
   font-size: 2.5rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
-  background-color: rgba(185, 119, 14, 0.4);
+  background-color: rgba(169, 204, 227, 0.5);
   color: black;
   text-align: center;
   box-shadow: 5px 5px 3px grey;
   margin-top: 5%;
+  padding: 20px;
 }
 
 .header {
@@ -273,16 +275,17 @@ h1 {
 }
 
 footer {
-  background-color: rgba(132, 122, 122, 0.3);
+  background-color: rgba(229, 231, 233, 0.8);
 }
 footer .footer__eslogan {
   margin-top: 20%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   font-weight: 600;
   color: black;
   padding: 25px;
   letter-spacing: 7px;
+  text-align: center;
 }
 footer .footer__desarrollo {
   font-family: "Source Sans Pro", sans-serif;
@@ -294,8 +297,9 @@ footer .footer__desarrollo {
   letter-spacing: 4px;
 }
 footer .logoempresa {
-  width: 10%;
-  height: 10%;
+  position: relative;
+  width: 15%;
+  height: 50%;
 }
 
 .form {
@@ -374,13 +378,35 @@ h1 {
 }
 
 /*---------------------------navbar----------------------------------*/
-@media (min-width: 320px) and (max-width: 768px) {
+@media (min-width: 300px) and (max-width: 768px) {
   .header {
     padding: 15px;
   }
   .header .nav-item {
     font-size: 1rem;
     font-weight: 300;
+  }
+  footer {
+    background-color: rgba(132, 122, 122, 0.3);
+  }
+  footer .footer__eslogan {
+    font-size: 0.3rem;
+    letter-spacing: 2px;
+  }
+  footer .footer__desarrollo {
+    font-size: 0.3rem;
+  }
+  footer .logoempresa {
+    width: 15%;
+    height: 40%;
+  }
+  footer .bi-facebook {
+    width: 15%;
+    height: 30%;
+  }
+  footer .bi-instagram {
+    width: 15%;
+    height: 30%;
   }
 }
 /*----index----*/
@@ -410,6 +436,7 @@ h1 {
     font-size: 1.1rem;
   }
   .institucional {
+    text-align: center;
     box-shadow: 5px 5px 3px;
   }
   .institucional .institucional__titulo {
@@ -426,18 +453,64 @@ h1 {
     margin-top: 40px;
   }
   .staff .staff__titulo {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   .staff .staff__name {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   .staff .staff__p {
+    font-size: 0.8rem;
+  }
+  /*----estudios----*/
+  .estudios {
+    margin-top: 3%;
+  }
+  .estudios .estudios__h2 {
+    font-size: 1.1rem;
+  }
+  .estudios .estudios__ul {
+    padding: 10px;
+  }
+  .estudios li {
     font-size: 1rem;
+  }
+  .indicaciones {
+    font-size: 1rem;
+  }
+  /*---indicaciones----*/
+  .preparaciones {
+    margin-top: 3%;
+  }
+  .preparaciones .preparaciones__p {
+    font-size: 1rem;
+  }
+  .preparaciones .preparaciones__li {
+    font-size: 0.8rem;
   }
   /*----contacto----*/
   .form-p {
-    font-size: 1rem;
+    font-size: 0.8rem;
     text-align: center;
+  }
+  .fotoFrente {
+    width: 100%;
+    margin: auto;
+  }
+  .form {
+    font-size: 0.8rem;
+  }
+  .info__parrafo {
+    font-size: 0.8rem;
+  }
+  .info__lista {
+    font-size: 0.8rem;
+  }
+  .info__titulo {
+    font-size: 1rem;
+  }
+  /*---exito----*/
+  .exito-p {
+    font-size: 1rem;
   }
   /*----whatsapp----*/
   .boton {
@@ -447,13 +520,6 @@ h1 {
     bottom: 15px;
     right: 15px;
     font-size: 23px;
-  }
-  /*----footer----*/
-  footer {
-    background-color: rgba(132, 122, 122, 0.3);
-  }
-  footer .footer__eslogan {
-    font-size: 1rem;
   }
 }
 /*-----cobertura (aca se aplicó grid)-----*/
@@ -471,6 +537,9 @@ h1 {
   }
   .cobertura-2 {
     grid-area: "columna-2";
+  }
+  .cobertura-p {
+    font-size: 1.2rem;
   }
 }
 
