--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,7 +3,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: rgba(254, 249, 231 );
-    
 }
 
 .logo {
@@ -39,5 +38,5 @@ body {
 .info__titulo {
     font-weight: bold;
     margin-top: 5%;
-    
+    font-family: 1.1rem;
 }
