--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -1,12 +1,12 @@
 h1 {
     font-size: 2.5rem;
     font-family: $fuente-secundaria;
-    font-weight: 600;
-    background-color: rgba(185, 119, 14, 0.4);
+    background-color: rgba(169, 204, 227, 0.5);
     color: $color-primario;
     text-align: center;
     box-shadow: 5px 5px 3px grey;
     margin-top: 5%;
+    padding: 20px;
 }
 
 
