agregue gitignore y readme

--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -9,5 +9,12 @@ h1 {
     padding: 20px;
 }
 
+/*-------------------titulo de secciones de informacion index/contacto----------------------*/
+
+.info__titulo {
+    font-weight: bold;
+    margin-top: 5%;
+    font-family: 1.1rem;
+}
 
 
