--- a/scss/componentes/_media.scss
+++ b/scss/componentes/_media.scss
@@ -2,44 +2,52 @@
 
 @media (min-width: 300px) and (max-width: 768px) {
     .header {
-        padding:15px;
+        padding: 15px;
 
-    .nav-item {
-        font-size: 1rem;
-        font-weight: 300;
+        .nav-item {
+            font-size: 1rem;
+            font-weight: 300;
+        }
     }
-}
-footer {
-    background-color: rgba(132, 122, 122, 0.3);
 
-    .footer__eslogan {
-        font-size: 0.5rem;
-        letter-spacing: 2px;
+    footer {
+        background-color: rgba(132, 122, 122, 0.3);
+
+        .footer__eslogan {
+            font-size: 0.5rem;
+            letter-spacing: 2px;
+        }
+
+        .footer__desarrollo {
+            font-size: 0.5rem;
+        }
+
+        .logoempresa {
+            width: 15%;
+            height: 40%;
+        }
+
+        .bi-facebook {
+            width: 15%;
+            height: 30%;
+        }
+
+        .bi-instagram {
+            width: 15%;
+            height: 30%;
+        }
     }
-    .footer__desarrollo {
-        font-size: 0.5rem;
-    }
-    .logoempresa {
-        width: 15%;
-        height: 40%;
-    }
-    .bi-facebook {
-        width: 15%;
-        height: 30%;
-    }
-    .bi-instagram {
-        width: 15%;
-        height: 30%;
-    }
-}
 }
 
 /*----index----*/
+
 @media (max-width:320px) {
     .mapa {
         width: 100%;
     }
 }
+
+/*----navbar y h1-----*/
 
 @media (max-width: 768px) {
     .navbar-brand {
@@ -102,60 +110,117 @@ footer {
     }
 
     /*----estudios----*/
+
     .estudios {
         margin-top: 3%;
-    
-    .estudios__h2 {
-        font-size: 1.1rem;
+
+        .estudios__h2 {
+            font-size: 1.1rem;
+        }
+
+        .estudios__ul {
+            padding: 10px;
+        }
+
+        li {
+            font-size: 1rem;
+        }
+
     }
-    .estudios__ul {
-        padding: 10px;
-    }
-     li {
-        font-size: 1rem;
-     }
-    }
+
     .indicaciones {
         font-size: 1rem;
     }
+
     /*---indicaciones----*/
 
     .preparaciones {
         margin-top: 3%;
 
         .preparaciones__p {
-            font-size: 1rem;
+            font-size: 0.8rem;
         }
         .preparaciones__li {
-            font-size: 0.8rem;
+            font-size: 0.7rem;
+        }
+    }
+
+
+    /*-----cobertura (aca se aplicó grid) -----*/
+
+    @media (min-width: 768px) and (max-width: 1400px) {
+        .cobertura {
+            font-size: 1.3rem;
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 1fr;
+            row-gap: 20px;
+            grid-template-areas:
+                "columna-1 columna-2"
+        }
+
+        .cobertura-1 {
+            grid-area: "columna-1";
+        }
+
+        .cobertura-2 {
+            grid-area: "columna-2";
+        }
+
+        .cobertura-p {
+            font-size: 1.2rem;
         }
     }
 
     /*----contacto----*/
-    .form-p {
-        font-size: 0.8rem;
-        text-align: center;
-    }
-    .fotoFrente {
-        width: 100%;
-        margin:auto;
-    }
     .form {
-        font-size: 0.8rem;
+
+        box-shadow: 5px 5px 3px;
+
+        .form-p {
+            font-size: 0.8rem;
+            text-align: center;
+        }
+
+        .form-label {
+            font-size: 0.7rem;
+        }
+
+        .form-control {
+            font-size: 0.7rem;
+        }
+
+        .textarea {
+            font-size: 0.7rem;
+        }
+
+        .btn {
+            font-size: 0.6rem;
+        }
     }
-    .info__parrafo {
-        font-size:0.8rem;
-    }
-    .info__lista {
-        font-size: 0.8rem;
-    }
+
     .info__titulo {
         font-size: 1rem;
     }
+
+    .info__parrafo {
+        font-size: 0.7rem;
+    }
+
+    .info__lista {
+        font-size: 0.7rem;
+    }
+
+    .fotoFrente {
+        width: 100%;
+        margin: auto;
+    }
+
     /*---exito----*/
     .exito-p {
         font-size: 1rem;
     }
+
     /*----whatsapp----*/
     .boton {
         position: fixed;
@@ -166,29 +231,4 @@ footer {
         font-size: 23px;
     }
 
-}
-
-/*-----cobertura (aca se aplicó grid)-----*/
-
-@media (min-width: 768px) and (max-width: 1400px) {
-    .cobertura {
-        font-size: 1.3rem;
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 1fr;
-        row-gap: 20px;
-        grid-template-areas:
-            "columna-1 columna-2"
-    }
-
-    .cobertura-1 {
-        grid-area: "columna-1";
-    }
-
-    .cobertura-2 {
-        grid-area: "columna-2";
-    }
-    .cobertura-p {
-        font-size: 1.2rem;
-    }
 }
