--- a/scss/paginas/_cobertura.scss
+++ b/scss/paginas/_cobertura.scss
@@ -17,7 +17,7 @@
 
     }
     li:before {
-        content: url(/iconos/chevron-double-right.svg);
+        content: url(/iconos/chevron.svg);
     }
     li:hover {
         transform: scale(1.1);
