--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,6 @@ body {
   color: grey;
 }
 
-/*-------------------titulos de secciones de informacion index/contacto----------------------*/
-.info__titulo {
-  font-weight: bold;
-  margin-top: 5%;
-  font-family: 1.1rem;
-}
-
 .bi-instagram {
   color: rgb(234, 71, 166);
 }
@@ -83,6 +76,14 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1.2rem;
   line-height: 40px;
+}
+
+.form .textarea, .form .form-label, .info__lista, .info__parrafo, .info__listado {
+  list-style: none;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1rem;
+  line-height: 45px;
+  color: darkslategrey;
 }
 
 .info__listado {
@@ -146,7 +147,7 @@ body {
   font-size: 1.1rem;
 }
 .estudios li:before {
-  content: url(/iconos/arrow-right-short.svg);
+  content: url(/iconos/arrow.svg);
 }
 
 .indicaciones {
@@ -178,7 +179,7 @@ body {
   align-items: center;
 }
 .cobertura li:before {
-  content: url(/iconos/chevron-double-right.svg);
+  content: url(/iconos/chevron.svg);
 }
 .cobertura li:hover {
   transform: scale(1.1);
@@ -192,7 +193,7 @@ body {
   margin-top: 5%;
 }
 
-.info__lista, .info__parrafo, .info__listado {
+.form .textarea, .form .form-label, .info__lista, .info__parrafo, .info__listado {
   list-style: none;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1rem;
@@ -212,10 +213,6 @@ body {
   padding: 20px;
 }
 
-.form {
-  font-size: 1rem;
-}
-
 .preparaciones {
   font-family: "Source Sans Pro", sans-serif;
 }
@@ -225,11 +222,11 @@ body {
   margin-top: 20px;
 }
 .preparaciones .preparaciones__li {
-  text-decoration: none;
   font-size: 1.1rem;
+  list-style: none;
 }
-.preparaciones .preparaciones__li::before {
-  content: url(/iconos/arrow-right-short.svg);
+.preparaciones .preparaciones__li:before {
+  content: url(/iconos/arrow.svg);
 }
 
 .exito-p {
@@ -249,6 +246,13 @@ h1 {
   box-shadow: 5px 5px 3px grey;
   margin-top: 5%;
   padding: 20px;
+}
+
+/*-------------------titulo de secciones de informacion index/contacto----------------------*/
+.info__titulo {
+  font-weight: bold;
+  margin-top: 5%;
+  font-family: 1.1rem;
 }
 
 .header {
@@ -297,21 +301,32 @@ footer .footer__desarrollo {
 footer .logoempresa {
   position: relative;
   width: 15%;
-  height: 50%;
+  height: 55%;
+}
+
+.form .textarea, .form .form-label, .info__listado, .info__parrafo, .info__lista {
+  list-style: none;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1rem;
+  line-height: 45px;
+  color: darkslategrey;
 }
 
 .form {
-  background-color: beige;
+  background-color: rgb(71, 71, 67);
   margin-top: 3%;
   margin-bottom: 3%;
   border: solid 2px beige;
   box-shadow: 7px 7px 5px grey;
   border-radius: 5px;
+  width: 80%;
+  margin-left: 10%;
 }
-
-.form-p {
-  font-size: 1.2rem;
-  margin-top: 5%;
+.form .form-label {
+  color: beige;
+}
+.form .textarea {
+  color: beige;
 }
 
 /*----------------------animacion h1-----------------------------*/
@@ -367,12 +382,12 @@ h1 {
 
 /*--------------------------botones formulario de contacto-------------------------------*/
 .btn {
-  background-color: darkslategrey;
+  background-color: black;
   color: beige;
 }
 .btn:hover {
-  background-color: cornflowerblue;
-  color: darkslategrey;
+  background-color: beige;
+  color: black;
 }
 
 /*---------------------------navbar----------------------------------*/
@@ -413,6 +428,7 @@ h1 {
     width: 100%;
   }
 }
+/*----navbar y h1-----*/
 @media (max-width: 768px) {
   .navbar-brand {
     width: 20%;
@@ -480,48 +496,17 @@ h1 {
     margin-top: 3%;
   }
   .preparaciones .preparaciones__p {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
   .preparaciones .preparaciones__li {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
+  /*-----cobertura (aca se aplicó grid) -----*/
   /*----contacto----*/
-  .form-p {
-    font-size: 0.8rem;
-    text-align: center;
-  }
-  .fotoFrente {
-    width: 100%;
-    margin: auto;
-  }
-  .form {
-    font-size: 0.8rem;
-  }
-  .info__parrafo {
-    font-size: 0.8rem;
-  }
-  .info__lista {
-    font-size: 0.8rem;
-  }
-  .info__titulo {
-    font-size: 1rem;
-  }
   /*---exito----*/
-  .exito-p {
-    font-size: 1rem;
-  }
   /*----whatsapp----*/
-  .boton {
-    position: fixed;
-    width: 50px;
-    height: 50px;
-    bottom: 15px;
-    right: 15px;
-    font-size: 23px;
-  }
 }
-/*-----cobertura (aca se aplicó grid)-----*/
-@media (min-width: 768px) and (max-width: 1400px) {
+@media (max-width: 768px) and (min-width: 768px) and (max-width: 1400px) {
   .cobertura {
     font-size: 1.3rem;
     display: grid;
@@ -538,6 +523,63 @@ h1 {
   }
   .cobertura-p {
     font-size: 1.2rem;
+  }
+}
+@media (max-width: 768px) {
+  .form {
+    box-shadow: 5px 5px 3px;
+  }
+  .form .form-p {
+    font-size: 0.8rem;
+    text-align: center;
+  }
+  .form .form-label {
+    font-size: 0.7rem;
+  }
+  .form .form-control {
+    font-size: 0.7rem;
+  }
+  .form .textarea {
+    font-size: 0.7rem;
+  }
+  .form .btn {
+    font-size: 0.6rem;
+  }
+}
+@media (max-width: 768px) {
+  .info__titulo {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 768px) {
+  .info__parrafo {
+    font-size: 0.7rem;
+  }
+}
+@media (max-width: 768px) {
+  .info__lista {
+    font-size: 0.7rem;
+  }
+}
+@media (max-width: 768px) {
+  .fotoFrente {
+    width: 100%;
+    margin: auto;
+  }
+}
+@media (max-width: 768px) {
+  .exito-p {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 768px) {
+  .boton {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 15px;
+    right: 15px;
+    font-size: 23px;
   }
 }
 
