--- a/scss/layout/_form.scss
+++ b/scss/layout/_form.scss
@@ -1,13 +1,27 @@
+%parrafo {
+    list-style: none;
+    font-family: $fuente-primaria;
+    font-size: 1rem;
+    line-height: 45px;
+    color: $color-secundario;
+}
 .form {
-    background-color: $color-terciario;
+    background-color: rgb(71, 71, 67);
     margin-top: 3%;
     margin-bottom: 3%;
     border: solid 2px $color-terciario;
     box-shadow: 7px 7px 5px grey;
     border-radius: 5px;
+    width:80%;
+    margin-left: 10%;
+    
+.form-label {
+    @extend %parrafo;
+    color: $color-terciario;
 }
 
-.form-p {
-    font-size: 1.2rem;
-    margin-top: 5%;
+.textarea {
+    @extend %parrafo;
+    color: $color-terciario;
+}
 }
