--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -167,16 +166,23 @@ body {
 }
 
 .cobertura {
-  list-style: none;
+  font-size: 1.1rem;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 1fr;
+  row-gap: 20px;
+  grid-template-areas: "columna-1 columna-2";
+}
+.cobertura .cobertura__1 {
+  grid-area: "columna-1";
+  margin-top: 5%;
+}
+.cobertura .cobertura__2 {
+  grid-area: "columna-2";
+  margin-top: 5%;
 }
 .cobertura li {
-  font-size: 0.8rem;
-  font-family: "Source Sans Pro", sans-serif;
-  margin-top: 5%;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  list-style: none;
 }
 .cobertura li:before {
   content: url(/iconos/chevron.svg);
@@ -186,10 +192,10 @@ body {
   color: darkgoldenrod;
 }
 
-.cobertura-p {
-  text-align: center;
-  font-size: 0.7rem;
+.p-cobertura {
+  font-size: 1.2rem;
   font-weight: 600;
+  text-align: center;
   margin-top: 5%;
 }
 
@@ -501,31 +507,19 @@ h1 {
   .preparaciones .preparaciones__li {
     font-size: 0.7rem;
   }
-  /*-----cobertura (aca se aplicó grid) -----*/
-  /*----contacto----*/
-  /*---exito----*/
-  /*----whatsapp----*/
-}
-@media (max-width: 768px) and (min-width: 768px) and (max-width: 1400px) {
   .cobertura {
-    font-size: 1.3rem;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 1fr;
-    row-gap: 20px;
-    grid-template-areas: "columna-1 columna-2";
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
   }
-  .cobertura-1 {
-    grid-area: "columna-1";
+  .cobertura .cobertura__1, .cobertura .cobertura__2 {
+    font-size: 0.8rem;
   }
-  .cobertura-2 {
-    grid-area: "columna-2";
+  .p-cobertura {
+    font-size: 1rem;
   }
-  .cobertura-p {
-    font-size: 1.2rem;
-  }
-}
-@media (max-width: 768px) {
+  /*----contacto----*/
   .form {
     box-shadow: 5px 5px 3px;
   }
@@ -545,34 +539,24 @@ h1 {
   .form .btn {
     font-size: 0.6rem;
   }
-}
-@media (max-width: 768px) {
   .info__titulo {
     font-size: 1rem;
   }
-}
-@media (max-width: 768px) {
   .info__parrafo {
     font-size: 0.7rem;
   }
-}
-@media (max-width: 768px) {
   .info__lista {
     font-size: 0.7rem;
   }
-}
-@media (max-width: 768px) {
   .fotoFrente {
     width: 100%;
     margin: auto;
   }
-}
-@media (max-width: 768px) {
+  /*---exito----*/
   .exito-p {
     font-size: 1rem;
   }
-}
-@media (max-width: 768px) {
+  /*----whatsapp----*/
   .boton {
     position: fixed;
     width: 50px;
