--- a/scss/componentes/_media.scss
+++ b/scss/componentes/_media.scss
@@ -144,33 +144,18 @@
             font-size: 0.7rem;
         }
     }
-
-
-    /*-----cobertura (aca se aplicó grid) -----*/
-
-    @media (min-width: 768px) and (max-width: 1400px) {
-        .cobertura {
-            font-size: 1.3rem;
-            display: grid;
-            grid-template-columns: 50% 50%;
-            grid-template-rows: 1fr;
-            row-gap: 20px;
-            grid-template-areas:
-                "columna-1 columna-2"
-        }
-
-        .cobertura-1 {
-            grid-area: "columna-1";
-        }
-
-        .cobertura-2 {
-            grid-area: "columna-2";
-        }
-
-        .cobertura-p {
-            font-size: 1.2rem;
-        }
+   .cobertura {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    .cobertura__1, .cobertura__2 {
+        font-size: 0.8rem;
     }
+   }
+   .p-cobertura {
+    font-size: 1rem;
+   }
 
     /*----contacto----*/
     .form {
