--- a/scss/paginas/_cobertura.scss
+++ b/scss/paginas/_cobertura.scss
@@ -22,7 +22,7 @@
     }
 
     li:before {
-        content: url(/iconos/chevron.svg);
+        content: url(/iconos/chevronright.svg);
     }
 
     li:hover {
