--- a/scss/paginas/_estudios.scss
+++ b/scss/paginas/_estudios.scss
@@ -20,7 +20,7 @@
             font-size: 1.1rem;
         }
         li:before {
-          content: url(/iconos/arrowright.svg);
+          content: url(/iconos/arrow-right.svg);
         }
        
 }
