acomodé iconos de la pagina indicaciones

--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ body {
   list-style: none;
 }
 .preparaciones .preparaciones__li:before {
-  content: url(/iconos/arrow.svg);
+  content: url(/iconos/arrow-right.svg);
 }
 
 .exito-p {
