--- a/scss/paginas/_indicaciones.scss
+++ b/scss/paginas/_indicaciones.scss
@@ -11,6 +11,6 @@
         list-style: none;
     }
     .preparaciones__li:before {
-        content: url(/iconos/arrow.svg);
+        content: url(/iconos/arrow-right.svg);
     }
 }
