--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -26,7 +26,7 @@ footer {
     
     .logoempresa {
         position: relative;
-        width: 19%;
-        height: 55%;
+        width: 15%;
+        height: auto;
     }
 }
